# labs

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
lab_01/: add_cuda.cu  add_pytorch.py  add_triton.py  benchmark.py  benchmark_best_practice.py  pyproject.toml
lab_02/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  index.html  main.py  model.py  nginx.conf  pyproject.toml
lab_03/asst3/: cloud_readme.md
lab_03/asst3/even_eaiser_guide/: add.cu
lab_03/asst3/render/: benchmark.cu  checker.py  cudaRenderer.cu
lab_03/asst3/saxpy/: cudaSaxpy
lab_03/asst3/scan/: Makefile  cudaScan  scan.cu
lab_03/cs149gpt/: README.md  gpt149.py  sample.py
lab_03/even_eaiser_guide/: add  add.cpp  add_cuda
lab_03/render/: circleRenderer.h  exclusiveScan.cu_inl  main.cpp  refRenderer.cpp  refTimings.txt
lab_03/saxpy/: Makefile  cudaSaxpy  saxpy.cu
lab_03/scan/: checker.py  scan.cu
lab_03_cs149/asst3/render/: Makefile  README.md  circleBoxTest.cu_inl  cudaRenderer.cu  cudaRenderer.h  noise.cpp  sceneLoader.cpp
lab_03_cs149/asst3/scan/: cudaScan  main.cpp  scan.cu
lab_03_cs149/cs149gpt/: model.py  module.cpp
